feat: update resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -113,7 +113,12 @@
               </li>
               <li>
                   <b>Server software:</b>
-                  Apache, Nginx, Postfix, MySQL, PostgreSQL, Mediawiki, Mailman
+                  Apache, Nginx, Postfix, MySQL, PostgreSQL, Mediawiki, Mailman, Multipass, MAAS.io,
+                  Traefik, Cloud-init, Roundcube, Ansible
+              </li>
+              <li>
+                  <b>Miscellaneous Services:</b>
+                  Matrix (Synapse), Matrix (Dendrite), Nextcloud, Owncloud, Icecast, Wordpress 
               </li>
           </ul>
 
@@ -152,8 +157,14 @@
 
           <h2 class="subtitle is-size-5">System Administrator, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (September 2020-<em>present</em>)</h2>
           <ul>
-              <li>Working with MediaWiki <a href="https://wiki.sugarlabs.org">wiki.sugarlabs.org</a></li>
-              <li>Matrix Bridge for Sugar @ <a href="https://matrix.to/#/#sugar:matrix.org">#sugar:matrix.org</a></li>
+              <li>Maintains the MediaWiki <a href="https://wiki.sugarlabs.org">wiki.sugarlabs.org</a> instance of Sugar Labs</li>
+              <li>Worked with KVM to manage virtual machines on bare metal</li>
+              <li>Introduced continous logging and alerting systems with 
+                  <a href="https://grafana.org" rel="_blank">Grafana</a> and 
+                  <a href="https://prometheus.io" rel="_blank">Prometheus</a>, 
+                  working with, system information monitoring, Apache + Nginx monitoring, etc. </li>
+              <li><a href="https://matrix.org">Matrix</a> 
+                  operations, bridging, integratons and scalable services for organization communication</li>
               <li>See <a href="https://wiki.sugarlabs.org/go/Infrastructure_Team/Contacts">Infrastructure Team</a> for more information.
           </ul>
           
