--- a/resume/index.html
+++ b/resume/index.html
@@ -202,7 +202,7 @@
           </ul>
           <br>
 
-          <h2 class="subtitle is-size-5">Founder / maintainer, 
+          <h2 class="subtitle is-size-5">Project maintainer, 
               <a href="https://github.com/srevinsaju/guiscrcpy" rel="_blank">
                   guiscrcpy
               </a> (March 2018-<em>present)</em></h2>
