--- a/resume/index.html
+++ b/resume/index.html
@@ -67,10 +67,12 @@
       <section class="section" id="#summary">
         <h1 class="title is-size-4">Summary</h1>
         <ul>
-            <li>System Administrator, <a class="em" href="https://sugarlabs.org" rel="_blank">Sugar Labs Foundation</a></li>
-            <li>Activity Library (4) Designer, <a class="em" href="https://sugarlabs.org" rel="_blank">Sugar Labs Foundation</a></li>
+            <li>DevOps Engineer, <a class="em" href="https://sugarlabs.org" rel="_blank">Sugar Labs Foundation</a></li>
+            <li>Developer, <a class="em" href="https://kde.org" rel="_blank">The KDE Foundation</a></li>
             <li>Developer, <a class="em" href="https://appimage.org" rel="_blank">AppImage Organization</a></li>
-            <li>GSoC Assisting Mentor, <a class="em" href="https://sugarlabs.org" rel="_blank">Sugar Labs Foundation</a></li>
+            <li>Activity Library (4) Designer, <a class="em" href="https://sugarlabs.org" rel="_blank">Sugar Labs Foundation</a></li>
+            <li>GSoC Mentor, 2021, <a class="em" href="https://sugarlabs.org" rel="_blank">Sugar Labs Foundation</a></li>
+            <li>GSoC Assisting Mentor, 2020, <a class="em" href="https://sugarlabs.org" rel="_blank">Sugar Labs Foundation</a></li>
             <li>Open Source Contributor (Various repositories on <a class="em" href="https://github.com" rel="_blank">GitHub</a>)</li>
         </ul>
 
@@ -114,7 +116,7 @@
               <li>
                   <b>Server software:</b>
                   Apache, Nginx, Postfix, MySQL, PostgreSQL, Mediawiki, Mailman, Multipass, MAAS.io,
-                  Traefik, Cloud-init, Roundcube, Ansible
+                  Cloud-init, Roundcube, Ansible, Traefik
               </li>
               <li>
                   <b>Miscellaneous Services:</b>
@@ -153,44 +155,57 @@
 
 
       <section class="section" id="#work">
-          <h1 class="title is-size-4 is-spaced" >Work Experience</h1>
+            <h1 class="title is-size-4 is-spaced" >Work Experience</h1>
 
-          <h2 class="subtitle is-size-5">System Administrator, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (September 2020-<em>present</em>)</h2>
-          <ul>
-              <li>Maintains the MediaWiki <a href="https://wiki.sugarlabs.org">wiki.sugarlabs.org</a> instance of Sugar Labs</li>
-              <li>Worked with KVM to manage virtual machines on bare metal</li>
-              <li>Introduced continous logging and alerting systems with 
-                  <a href="https://grafana.org" rel="_blank">Grafana</a> and 
-                  <a href="https://prometheus.io" rel="_blank">Prometheus</a>, 
-                  working with, system information monitoring, Apache + Nginx monitoring, etc. </li>
-              <li><a href="https://matrix.org">Matrix</a> 
-                  operations, bridging, integratons and scalable services for organization communication</li>
-              <li>See <a href="https://wiki.sugarlabs.org/go/Infrastructure_Team/Contacts">Infrastructure Team</a> for more information.
-          </ul>
-          
-          <br>
+            <h2 class="subtitle is-size-5">Developer, <a href="https://kde.org" rel="_blank"></a> (March, 2021-<em>present)</em></h2>
+            <ul>
+                <li>Worked on Kirigami based Matrix client for KDE, <a href="https://invent.kde.org/network/neochat" rel="_blank">Neochat</a></li>
+                <li>Adding features to <a href="https://invent.kde.org/graphics/spectacle">Spectacle</a>, the KDE Screenshot app.</li>
+                <li>Bug triaging and testing on Plasma Desktop</li>
+            </ul>
+            <br>
+
+            <h2 class="subtitle is-size-5">DevOps Engineer, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (September 2020-<em>present</em>)</h2>
+            <ul>
+                <li>Maintains the MediaWiki <a href="https://wiki.sugarlabs.org">wiki.sugarlabs.org</a> instance of Sugar Labs</li>
+                <li>Worked with KVM to manage virtual machines on bare metal</li>
+                <li>Introduced continous logging and alerting systems with 
+                    <a href="https://grafana.org" rel="_blank">Grafana</a> and 
+                    <a href="https://prometheus.io" rel="_blank">Prometheus</a>, 
+                    working with, system information monitoring, Apache + Nginx monitoring, etc. </li>
+                <li><a href="https://matrix.org">Matrix</a> 
+                    operations, bridging, integratons and scalable services for organization communication</li>
+                <li>See <a href="https://wiki.sugarlabs.org/go/Infrastructure_Team/Contacts">Infrastructure Team</a> for more information.
+            </ul>
+            <br>
 
 
-          <h2 class="subtitle is-size-5">Developer, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (2020-<em>present)</em></h2>
-          <ul>
-              <li>Arch Linux git package distributor of sugar, sugar-artwork, sugar-toolkit-gtk3, sugar-toolkit and sugar-runner</li>
-              <li>Docker container maintainer for sugar-desktop</li>
-              <li>Ported python2 activities to python3</li>
-          </ul>
+            <h2 class="subtitle is-size-5">Developer, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (2020-<em>present)</em></h2>
+            <ul>
+                <li>Arch Linux git package distributor of sugar, sugar-artwork, sugar-toolkit-gtk3, sugar-toolkit and sugar-runner</li>
+                <li>Docker container maintainer for sugar-desktop</li>
+                <li>Ported python2 activities to python3</li>
+            </ul>
+            <br>
 
+            <h2 class="subtitle is-size-5">Developer, <a href="https://appimage.org" rel="_blank">AppImage Project</a> (July 2020-<em>present)</em></h2>
+            <ul>
+                <li>Redesigned the AppImage catalog: <a class="a-bold" href="https://g.srev.in/get-appimage"  rel="_blank">g.srev.in/get-appimage</a></li>
+                <li>Developed <a class="a-bold" href="https://github.com/srevinsaju/pyappimage" rel="_blank">PyAppImage</a> to easily build and distribute AppImages for Python apps</li>
+                <li>Developed <a class="a-bold" href="https://zapx.now.sh" rel="_blank">Zap</a> 
+                    Package Manager for AppImages which helps to download, 
+                    install and update AppImages (delta updates supported) and integrates the AppImage to the desktop</li>
+            </ul>
+            <br>
 
-          <br>
+            <h2 class="subtitle is-size-5">Packager, <a href="https://www.thunderbird.net" rel="_blank">Mozilla Thunderbird</a> (MZLA)
+            (August 2020 - September 2020)</h2>
+            <ul>
+                <li>Volunteered to design a portable mode of distribution of <a href="https://www.thunderbird.net">Thunderbird</a> Email Client 
+                    <a href="https://github.com/srevinsaju/thunderbird-appimage">for Linux desktops</a> using AppImages</li>
+            </ul>
+            <br>
 
-          <h2 class="subtitle is-size-5">Developer, <a href="https://appimage.org" rel="_blank">AppImage Project</a> (July 2020-<em>present)</em></h2>
-          <ul>
-              <li>Redesigned the AppImage catalog: <a class="a-bold" href="https://g.srev.in/get-appimage"  rel="_blank">g.srev.in/get-appimage</a></li>
-              <li>Developed <a class="a-bold" href="https://github.com/srevinsaju/pyappimage" rel="_blank">PyAppImage</a> to easily build and distribute AppImages for Python apps</li>
-              <li>Developed <a class="a-bold" href="https://zapx.now.sh" rel="_blank">Zap</a> 
-                  Package Manager for AppImages which helps to download, 
-                  install and update AppImages (delta updates supported) and integrates the AppImage to the desktop</li>
-          </ul>
-
-          <br>
 
           <h2 class="subtitle is-size-5">Packager, <a href="https://element.io" rel="_blank">Element.io</a> 
               (August 2020 - September 2020)</h2>
