--- a/resume/index.html
+++ b/resume/index.html
@@ -167,14 +167,14 @@
 
             <h2 class="subtitle is-size-5">DevOps Engineer, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (September 2020-<em>present</em>)</h2>
             <ul>
-                <li>Maintains the MediaWiki <a href="https://wiki.sugarlabs.org">wiki.sugarlabs.org</a> instance of Sugar Labs</li>
-                <li>Worked with KVM to manage virtual machines on bare metal</li>
+                <li>Worked with MediaWiki <a href="https://wiki.sugarlabs.org">wiki.sugarlabs.org</a> instance of Sugar Labs</li>
                 <li>Introduced continous logging and alerting systems with 
                     <a href="https://grafana.org" rel="_blank">Grafana</a> and 
                     <a href="https://prometheus.io" rel="_blank">Prometheus</a>, 
                     working with, system information monitoring, Apache + Nginx monitoring, etc. </li>
                 <li><a href="https://matrix.org">Matrix</a> 
                     operations, bridging, integratons and scalable services for organization communication</li>
+                <li>Worked with KVM to manage virtual machines on bare metal</li>
                 <li>See <a href="https://wiki.sugarlabs.org/go/Infrastructure_Team/Contacts">Infrastructure Team</a> for more information.
             </ul>
             <br>
@@ -182,7 +182,11 @@
 
             <h2 class="subtitle is-size-5">Developer, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (2020-<em>present)</em></h2>
             <ul>
-                <li>Arch Linux git package distributor of sugar, sugar-artwork, sugar-toolkit-gtk3, sugar-toolkit and sugar-runner</li>
+                <li>Volunteered to create a new Activity (application) store for Sugar, dubbed 'ASLOv4' 
+                    (<a href="https://v4.activities.sugarlabs.org">v4.activities.sugarlabs.org</a>) for a statically 
+                    generated, efficient mode of distribution and discovery of new activities for students.
+                </li>
+                <li>Arch Linux package distributor of sugar-git, sugar-artwork-git, sugar-toolkit-gtk3-git, sugar-toolkit-git and sugar-runner-git</li>
                 <li>Docker container maintainer for sugar-desktop</li>
                 <li>Ported python2 activities to python3</li>
             </ul>
@@ -191,10 +195,10 @@
             <h2 class="subtitle is-size-5">Developer, <a href="https://appimage.org" rel="_blank">AppImage Project</a> (July 2020-<em>present)</em></h2>
             <ul>
                 <li>Redesigned the AppImage catalog: <a class="a-bold" href="https://g.srev.in/get-appimage"  rel="_blank">g.srev.in/get-appimage</a></li>
-                <li>Developed <a class="a-bold" href="https://github.com/srevinsaju/pyappimage" rel="_blank">PyAppImage</a> to easily build and distribute AppImages for Python apps</li>
                 <li>Developed <a class="a-bold" href="https://zapx.now.sh" rel="_blank">Zap</a> 
                     Package Manager for AppImages which helps to download, 
                     install and update AppImages (delta updates supported) and integrates the AppImage to the desktop</li>
+                <li>Developed <a class="a-bold" href="https://github.com/srevinsaju/pyappimage" rel="_blank">PyAppImage</a> to easily build and distribute AppImages for Python apps</li>
             </ul>
             <br>
 
