--- a/resume/index.html
+++ b/resume/index.html
@@ -120,7 +120,7 @@
               </li>
               <li>
                   <b>Miscellaneous Services:</b>
-                  Matrix (Synapse), Matrix (Dendrite), Nextcloud, Owncloud, Icecast, Wordpress 
+                  Matrix (Synapse), Matrix (Dendrite), Nextcloud, Owncloud, Icecast, Wordpress, Wireguard 
               </li>
           </ul>
 
