--- a/index.html
+++ b/index.html
@@ -770,8 +770,7 @@
       <div class="container" style="margin-top: 10vh">
         <h2 class="ss-about-h1 has-text-centered has-text-left-desktop">Contact me &#129305;</h2>
         <p class="ss-about-content has-text-centered has-text-left-desktop">
-          I'm mostly available on <a class="ss-fun-link" href="https://en.wikipedia.org/wiki/Internet_Relay_Chat" target="_blank" rel="noreferrer">IRC</a>,
-          E-mail, and on a few links below!
+        Let's have some coffee! ☕️
           
         </p>
 <div class="container ss-contact-cards" style="margin-top: 0.5em;">
